corrected spelling mistake

--- a/app/partials/recipies.html
+++ b/app/partials/recipies.html
@@ -1,7 +1,7 @@
 <div class="span2">
   <div class="well sidebar-nav">
     <ul class="nav nav-list">
-      <li class="nav-header">Recipies</li>
+      <li class="nav-header">Recipes</li>
       <li class="active"><a href="#butternut">Butternut Squash</a></li>
       <li><a href="#chickpeas">Chickpeas</a></li>
       <li><a href="#peaham">Pea &amp; Ham</a></li>            
@@ -14,8 +14,8 @@
   </div><!--/.well -->
 </div><!--/span-->
 <div class="span10">
-  <section id="Recipies">
-    <div class="page-header"><h2>Recipies</h2></div>
+  <section id="Recipes">
+    <div class="page-header"><h2>Recipes</h2></div>
     <h3 id="butternut">Butternut Squash and Ginger Soup</h3>
     <ul>
       <li>1 medium onion</li>
