fixed e2e testcase for recipe

--- a/app/partials/recipes.html
+++ b/app/partials/recipes.html
@@ -14,7 +14,7 @@
   </div><!--/.well -->
 </div><!--/span-->
 <div class="span10">
-  <section id="Recipes">
+  <section id="recipes">
     <div class="page-header"><h2>Recipes</h2></div>
     <h3 id="butternut">Butternut Squash and Ginger Soup</h3>
     <ul>
