Corrected some links

--- a/app/partials/recipes.html
+++ b/app/partials/recipes.html
@@ -3,12 +3,12 @@
     <ul class="nav nav-list">
       <li class="nav-header">Recipes</li>
       <li class="active"><a href="#butternut">Butternut Squash</a></li>
-      <li><a href="#chickpeas">Chickpeas</a></li>
-      <li><a href="#peaham">Pea &amp; Ham</a></li>            
+      <li><a href="#chickpeas">Chick Peas</a></li>
+      <li><a href="#peaham">Pea &amp; Ham Soup</a></li>            
       <li><a href="#chops">Pork Chops</a></li>
       <li><a href="#chilli">Quick Chilli</a></li>
       <li><a href="#ragu">Rapid Ragu</a></li>      
-      <li><a href="#salmon">Salmon</a></li>      
+      <li><a href="#salmon">Mirrin Salmon</a></li>      
       <li><a href="#scallops">Scallops</a></li>
     </ul>
   </div><!--/.well -->
