--- a/app/partials/wineview.html
+++ b/app/partials/wineview.html
@@ -1,7 +1,7 @@
 <div class="row-fluid">
   <div class="span1 offset11">
     <div class="btn-group">
-      <button class="btn" ng-click="add()"><i class="icon-plus-sign"></i></button>
+      <button id="addWine" class="btn" ng-click="add()"><i class="icon-plus-sign"></i></button>
       <button class="btn" ng-click="smallThumbnails()"><i class="icon-th"></i></button>
       <button class="btn" ng-click="largeThumbnails()"><i class="icon-th-large"></i></button>
     </div>
@@ -33,7 +33,8 @@
             <a class="btn btn-small" 
                 ng-mouseenter="editCls='btn-primary'" 
                 ng-mouseleave="editCls=''" 
-                ng-class="editCls">
+                ng-class="editCls"
+                ng-click="edit(wine)">
                 <i class="icon-edit"></i> Edit
             </a>
             <a class="btn btn-small" 
