Removed offset for add button

--- a/app/partials/wineview.html
+++ b/app/partials/wineview.html
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span1 offset11">
+  <div class="span1">
     <div class="btn-group">
       <button id="addWine" class="btn" ng-click="add()"><i class="icon-plus-sign"></i></button>
       <button class="btn" ng-click="smallThumbnails()"><i class="icon-th"></i></button>
