--- a/app/partials/wineform.html
+++ b/app/partials/wineform.html
@@ -12,7 +12,10 @@
     <div class="control-group">
       <label class="control-label" for="inputGrape">Grape</label>
       <div class="controls">
-        <input type="text" id="inputGrape" placeholder="Grape" ng-model="wine.grape" required>
+        <select id="inputGrape" placeholder="Grape" ng-model="wine.grape" required>
+          <option>Shiraz</option>
+          <option>Merlot</option>
+        </select>   
       </div>
     </div>
     <div class="control-group">
