--- a/app/partials/wineform.html
+++ b/app/partials/wineform.html
@@ -3,23 +3,27 @@
 </div>
 <div class="modal-body">
   <form name="wineform" class="form-horizontal">
-    <div class="control-group">
+    <div class="control-group" ng-class="{ error: wineform.name.$invalid &amp;&amp; wineform.name.$dirty }">
       <label class="control-label" for="inputName">Name</label>
       <div class="controls">
-        <input type="text" id="inputName" placeholder="Name" ng-model="wine.name" required>
+        <input type="text" id="inputName" name="name" placeholder="Name" ng-model="wine.name" required>
+        <span class="error" ng-show="wineform.name.$error.required &amp;&amp; wineform.name.$dirty">Required</span>
       </div>  
     </div>
-    <div class="control-group">
+    <div class="control-group" ng-class="{ error: wineform.vintage.$invalid &amp;&amp; wineform.vintage.$dirty }">
       <label class="control-label" for="inputVintage">Vintage</label>
       <div class="controls">
-        <input type="text" id="inputVintage" placeholder="Vintage" ng-model="wine.vintage" required>
+        <input type="text" id="inputVintage" name="vintage" placeholder="Vintage" ng-model="wine.vintage" ng-pattern="/\d{4}/" required>
+        <span class="error" ng-show="wineform.vintage.$error.pattern &amp;&amp; wineform.vintage.$dirty">Year</span>
       </div>  
     </div>    
-    <div class="control-group">
+    <div class="control-group" ng-class="{ error: wineform.grape.$invalid &amp;&amp; wineform.grape.$dirty }">
       <label class="control-label" for="inputGrape">Grape</label>
       <div class="controls">
         <div class="input-append">
-          <input type="text" ng-model="selected" ng-change="onGrapeChange()" typeahead="grape.name for grape in grapes | filter: $viewValue">
+          <input type="text" id="inputGrape" name="grape" ng-model="selected" 
+            ng-change="onGrapeChange()" typeahead="grape.name for grape in grapes | filter: $viewValue" 
+            placeholder="Grape" required>
           <button class="btn" ng-disabled="!isNewGrape" ng-class="{ disabled: !isNewGrape }" type="button"><i class="icon-plus-sign"></i></button>
         </div>
       </div>
@@ -39,6 +43,6 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button ng-click="submit()" class="btn btn-primary">Submit</button>
+  <button ng-click="submit()" class="btn btn-primary" ng-disabled="wineform.$invalid">Submit</button>
   <button ng-click="cancel()" class="btn">Cancel</button>  
 </div>'
