--- a/app/partials/wineview.html
+++ b/app/partials/wineview.html
@@ -4,6 +4,7 @@
       <button id="addWine" class="btn" ng-click="add()"><i class="icon-plus-sign"></i></button>
       <button class="btn" ng-click="smallThumbnails()"><i class="icon-th"></i></button>
       <button class="btn" ng-click="largeThumbnails()"><i class="icon-th-large"></i></button>
+      <button class="btn" ng-click="refresh()"><i class="icon-refresh"></i></button>
     </div>  
   </div>
   <div class="span4 offset4">
@@ -38,7 +39,8 @@
             <a class="btn btn-small" 
                ng-mouseenter="deleteCls='btn-danger'" 
                ng-mouseleave="deleteCls=''" 
-               ng-class="deleteCls">
+               ng-class="deleteCls"
+               ng-click="delete(wine)">
                <i class="icon-trash"></i> Delete
             </a>                        
           </p>
