--- a/app/partials/wineform.html
+++ b/app/partials/wineform.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h3>{{mode}} Wine</h3>
+  <h3>Wine</h3>
 </div>
 <div class="modal-body">
   <form name="wineform" class="form-horizontal">
