Remember me auth, upgraded jquery and converted to mysql

--- a/i2037-client/app/partials/loginform.html
+++ b/i2037-client/app/partials/loginform.html
@@ -21,6 +21,12 @@
         </div>      
       </div>
     </div>
+    <div class="control-group">
+      <label class="control-label" for="inputRememberMe">Remember Me</label>
+      <div class="controls">
+        <input type="checkbox" id="inputRememberMe" ng-model="rememberMe">
+      </div>
+    </div>    
   </form>
 </div>
 <div class="modal-footer">
