--- a/i2037-client/app/partials/home.html
+++ b/i2037-client/app/partials/home.html
@@ -1,5 +1,4 @@
 <div class="hero-unit">
   <h1>Interface 2037</h1>
-  <div>Angular seed app: v<span app-version></span></div>
-  <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+  <div>Version: <span app-version></span></div>
 </div>
