--- a/i2037-client/app/partials/slickgrid.html
+++ b/i2037-client/app/partials/slickgrid.html
@@ -1,3 +1,17 @@
 <div class="span12">
-  <div id="myGrid" style="width:600px;height:500px;"></div>
+    <form class="form-inline" ng-controller="DatePickerCtrl">
+    	<div class="input-append">
+	        <input type="text" datepicker-popup="dd-MMMM-yyyy" ng-model="dt" open="opened" min="minDate" max="maxDate" 
+		        datepicker-options="dateOptions" 
+		        date-disabled="disabled(date, mode)" 
+		        ng-required="true"
+		        show-weeks="false" />	    		
+    		<button class="btn" ng-click="open()"><i class="icon-calendar"></i></button>
+    	</div>
+    	<button type="submit" class="btn btn-primary" ng-click="ok()">Submit</button>
+    </form>
+    <hr>
+	<div id="map-canvas" style="width:100%;height:500px"></div>
+<!-- 	<div id="graph" style="height:500px"></div>
+	<div id="myGrid" style="width:500px;height:400px;"></div> -->
 </div>
