--- a/i2037-client/app/partials/slickgrid.html
+++ b/i2037-client/app/partials/slickgrid.html
@@ -11,7 +11,7 @@
     	<button type="submit" class="btn btn-primary" ng-click="ok()">Submit</button>
     </form>
     <hr>
-	<div id="map-canvas" style="width:100%;height:500px"></div>
+	<div id="map-canvas" style="width:100%;height:600px;"></div>
 <!-- 	<div id="graph" style="height:500px"></div>
 	<div id="myGrid" style="width:500px;height:400px;"></div> -->
 </div>
