--- a/i2037-client/app/partials/moves.html
+++ b/i2037-client/app/partials/moves.html
@@ -8,7 +8,7 @@
 		        show-weeks="false" />	    		
     		<button class="btn" ng-click="open()"><i class="icon-calendar"></i></button>
     	</div>
-    	<button type="submit" class="btn btn-primary" ng-click="ok()">Submit</button>
+    	<button type="submit" class="btn btn-primary" btn-loading="isLoading" data-loading-text="Loading..." ng-click="submit()">Submit</button>
     </form>
     <hr>
 	<div id="map-canvas" style="width:100%;height:600px;"></div>
