--- a/i2037-client/app/partials/wineview.html
+++ b/i2037-client/app/partials/wineview.html
@@ -1,51 +1,53 @@
+<div class="page-header">
+  <h2>Wines</h2>
+</div>
 <div class="row-fluid">
-  <div class="span4">
-    <div class="btn-group">
-      <button id="addWine" class="btn" ng-click="add()"><i class="icon-plus-sign"></i></button>
-      <button class="btn" ng-click="smallThumbnails()"><i class="icon-th"></i></button>
-      <button class="btn" ng-click="largeThumbnails()"><i class="icon-th-large"></i></button>
-      <button class="btn" ng-click="refresh()"><i class="icon-refresh"></i></button>
+  <div class="span3">
+    <div class="well">
+<!--       <form class="form-search">
+        <div class="input-append span12">
+          <input type="text" class="search-query">
+          <button type="submit" class="btn">Search</button>
+        </div>       
+      </form>   -->          
+      <div class="btn-group">
+        <button id="addWine" class="btn" ng-click="add()"><i class="icon-plus-sign"></i></button>
+        <button class="btn" ng-click="smallThumbnails()"><i class="icon-th"></i></button>
+        <button class="btn" ng-click="largeThumbnails()"><i class="icon-th-large"></i></button>
+        <button class="btn" ng-click="refresh()"><i class="icon-refresh"></i></button>
+      </div>
     </div>  
   </div>
-  <div class="span4 offset4">
-    <form class="form-search pull-right">
-      <div class="input-append">
-        <input type="text" class="search-query">
-        <button type="submit" class="btn">Search</button>
-      </div>       
-    </form>
+  <div class="span9">
+    <ul class="thumbnails" ng-repeat="row in wineGrid">
+      <li ng-class="wineCls" ng-repeat="wine in row">
+        <div class="thumbnail media">
+          <a href="#" class="pull-left">
+            <img src="img/wine_thumbnail.jpg" class="media-object wine-thumbnail">
+          </a>
+          <div class="media-body">
+            <a href="#/cellar/wines/{{wine.wineId}}"><h4 class="media-heading">{{wine.name}} ({{wine.vintage}})</h4></a>
+            <p>{{wine.description}}</p>
+            <p><rating value="wine.rating" max="5" readonly="true"></rating></p>
+            <p>
+              <a class="btn btn-small" 
+                  ng-mouseenter="editCls='btn-primary'" 
+                  ng-mouseleave="editCls=''" 
+                  ng-class="editCls"
+                  href="#/cellar/wines/{{wine.wineId}}">
+                  <i class="icon-edit"></i> Edit
+              </a>
+              <a class="btn btn-small" 
+                 ng-mouseenter="deleteCls='btn-danger'" 
+                 ng-mouseleave="deleteCls=''" 
+                 ng-class="deleteCls"
+                 ng-click="delete(wine)">
+                 <i class="icon-trash"></i> Delete
+              </a>                        
+            </p>
+          </div>
+        </div> 
+      </li>
+    </ul>    
   </div>
-</div>
-<hr>
-<div class="row-fluid">
-  <ul class="thumbnails" ng-repeat="row in wineGrid">
-    <li ng-class="wineCls" ng-repeat="wine in row">
-      <div class="thumbnail media">
-        <a href="#" class="pull-left">
-          <img src="img/wine_thumbnail.jpg" class="media-object wine-thumbnail">
-        </a>
-        <div class="media-body">
-          <a href="#/cellar/wines/{{wine.wineId}}"><h4 class="media-heading">{{wine.name}} ({{wine.vintage}})</h4></a>
-          <p>{{wine.description}}</p>
-          <p><rating value="wine.rating" max="5" readonly="true"></rating></p>
-          <p>
-            <a class="btn btn-small" 
-                ng-mouseenter="editCls='btn-primary'" 
-                ng-mouseleave="editCls=''" 
-                ng-class="editCls"
-                href="#/cellar/wines/{{wine.wineId}}">
-                <i class="icon-edit"></i> Edit
-            </a>
-            <a class="btn btn-small" 
-               ng-mouseenter="deleteCls='btn-danger'" 
-               ng-mouseleave="deleteCls=''" 
-               ng-class="deleteCls"
-               ng-click="delete(wine)">
-               <i class="icon-trash"></i> Delete
-            </a>                        
-          </p>
-        </div>
-      </div> 
-    </li>
-  </ul>
 </div>
