--- a/i2037-client/app/partials/wineform.html
+++ b/i2037-client/app/partials/wineform.html
@@ -1,52 +1,63 @@
-<div class="page-header">
-  <h2>Wine</h2>
+<div class="span2">
+  <div class="well sidebar-nav">
+    <ul class="nav nav-list">
+      <li class="nav-header">Cellar</li>
+      <li class="active"><a href="#/cellar/wines">Wines</a></li>
+      <li><a href="#/cellar/grapes">Grapes</a></li>
+    </ul>
+  </div>  
 </div>
-<form name="wineform" class="form-horizontal">
-  <div class="control-group" ng-class="{ error: wineform.name.$invalid &amp;&amp; wineform.name.$dirty }">
-    <label class="control-label" for="inputName">Name</label>
-    <div class="controls">
-      <input type="text" id="inputName" name="name" placeholder="Name" ng-model="wine.name" required>
-      <span class="error" ng-show="wineform.name.$error.required &amp;&amp; wineform.name.$dirty">Required</span>
-    </div>  
+<div class="span10">
+  <div class="page-header">
+    <h2>Wine</h2>
   </div>
-  <div class="control-group" ng-class="{ error: wineform.vintage.$invalid &amp;&amp; wineform.vintage.$dirty }">
-    <label class="control-label" for="inputVintage">Vintage</label>
-    <div class="controls">
-      <input type="text" id="inputVintage" name="vintage" placeholder="Vintage" ng-model="wine.vintage" ng-pattern="/\d{4}/" required>
-      <span class="error" ng-show="wineform.vintage.$error.pattern &amp;&amp; wineform.vintage.$dirty">Year</span>
-    </div>  
-  </div>    
-  <div class="control-group" ng-class="{ error: wineform.grape.$invalid &amp;&amp; wineform.grape.$dirty }">
-    <label class="control-label" for="inputGrape">Grape</label>
-    <div class="controls">
-      <div class="input-append">
-        <input type="text" id="inputGrape" name="grape" ng-model="grapeName" 
-          ng-change="onGrapeChange()" 
-          typeahead="grape.name for grape in grapes | filter: $viewValue" 
-          placeholder="Grape" required>
-        <button class="btn" 
-          ng-disabled="!isNewGrape" 
-          ng-class="{ disabled: !isNewGrape }" 
-          ng-click="addGrape()" type="button"><i class="icon-plus-sign"></i></button>
+  <form name="wineform" class="form-horizontal">
+    <div class="control-group" ng-class="{ error: wineform.name.$invalid &amp;&amp; wineform.name.$dirty }">
+      <label class="control-label" for="inputName">Name</label>
+      <div class="controls">
+        <input type="text" id="inputName" name="name" placeholder="Name" ng-model="wine.name" required>
+        <span class="error" ng-show="wineform.name.$error.required &amp;&amp; wineform.name.$dirty">Required</span>
+      </div>  
+    </div>
+    <div class="control-group" ng-class="{ error: wineform.vintage.$invalid &amp;&amp; wineform.vintage.$dirty }">
+      <label class="control-label" for="inputVintage">Vintage</label>
+      <div class="controls">
+        <input type="text" id="inputVintage" name="vintage" placeholder="Vintage" ng-model="wine.vintage" ng-pattern="/\d{4}/" required>
+        <span class="error" ng-show="wineform.vintage.$error.pattern &amp;&amp; wineform.vintage.$dirty">Year</span>
+      </div>  
+    </div>    
+    <div class="control-group" ng-class="{ error: wineform.grape.$invalid &amp;&amp; wineform.grape.$dirty }">
+      <label class="control-label" for="inputGrape">Grape</label>
+      <div class="controls">
+        <div class="input-append">
+          <input type="text" id="inputGrape" name="grape" ng-model="grapeName" 
+            ng-change="onGrapeChange()" 
+            typeahead="grape.name for grape in grapes | filter: $viewValue" 
+            placeholder="Grape" required>
+          <button class="btn" 
+            ng-disabled="!isNewGrape" 
+            ng-class="{ disabled: !isNewGrape }" 
+            ng-click="addGrape()" type="button"><i class="icon-plus-sign"></i></button>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="control-group">
-    <label class="control-label" for="inputDescription">Description</label>
-    <div class="controls">
-      <textarea id="inputDescription" placeholder="Description" ng-model="wine.description" rows="5"></textarea>
+    <div class="control-group">
+      <label class="control-label" for="inputDescription">Description</label>
+      <div class="controls">
+        <textarea id="inputDescription" placeholder="Description" ng-model="wine.description" rows="5"></textarea>
+      </div>
     </div>
-  </div>
-  <div class="control-group">
-    <label class="control-label" for="inputRating">Rating</label>
-    <div class="controls">
-      <rating value="wine.rating" max="5" readonly="false"></rating>
+    <div class="control-group">
+      <label class="control-label" for="inputRating">Rating</label>
+      <div class="controls">
+        <rating value="wine.rating" max="5" readonly="false"></rating>
+      </div>
     </div>
-  </div>
-  <div class="form-actions">
-    <button ng-click="submit()" 
-      class="btn btn-primary" 
-      ng-disabled="wineform.$invalid || isNewGrape">Save</button>
-    <button ng-click="cancel()" class="btn">Cancel</button>  
-  </div>  
-</form>
+    <div class="form-actions">
+      <button ng-click="submit()" 
+        class="btn btn-primary" 
+        ng-disabled="wineform.$invalid || isNewGrape">Save</button>
+      <button ng-click="cancel()" class="btn">Cancel</button>  
+    </div>  
+  </form>
+</div>
