--- a/i2037-client/app/partials/wineview.html
+++ b/i2037-client/app/partials/wineview.html
@@ -1,24 +1,35 @@
-<div class="page-header">
-  <h2>Wines</h2>
+<div class="span2">
+  <div class="well sidebar-nav">
+    <ul class="nav nav-list">
+      <li class="nav-header">Cellar</li>
+      <li class="active"><a href="#/cellar/wines">Wines</a></li>
+      <li><a href="#/cellar/grapes">Grapes</a></li>
+    </ul>
+  </div>  
 </div>
-<div class="row-fluid">
-  <div class="span3">
-    <div class="well">
-<!--       <form class="form-search">
-        <div class="input-append span12">
-          <input type="text" class="search-query">
-          <button type="submit" class="btn">Search</button>
-        </div>       
-      </form>   -->          
+<div class="span10">
+  <div class="page-header">
+    <h2>Wines</h2>
+  </div>
+  <div class="row-fluid">
+    <div class="span4">
       <div class="btn-group">
         <button id="addWine" class="btn" ng-click="add()"><i class="icon-plus-sign"></i></button>
         <button class="btn" ng-click="smallThumbnails()"><i class="icon-th"></i></button>
         <button class="btn" ng-click="largeThumbnails()"><i class="icon-th-large"></i></button>
         <button class="btn" ng-click="refresh()"><i class="icon-refresh"></i></button>
       </div>
-    </div>  
-  </div>
-  <div class="span9">
+    </div>
+    <div class="span4 offset4">
+      <form class="form-search pull-right">
+        <div class="input-append">
+          <input type="text" class="search-query">
+          <button type="submit" class="btn">Search</button>
+        </div>       
+      </form>
+    </div>
+  </div> 
+  <div class="row-fluid">
     <ul class="thumbnails" ng-repeat="row in wineGrid">
       <li ng-class="wineCls" ng-repeat="wine in row">
         <div class="thumbnail media">
@@ -49,5 +60,5 @@
         </div> 
       </li>
     </ul>    
-  </div>
+  </div>         
 </div>
