--- a/i2037-client/app/partials/moves.html
+++ b/i2037-client/app/partials/moves.html
@@ -1,15 +1,26 @@
 <div class="span12">
-    <form class="form-inline" ng-controller="DatePickerCtrl">
-    	<div class="input-append">
-	        <input type="text" datepicker-popup="dd-MMMM-yyyy" ng-model="dt" open="opened" min="minDate" max="maxDate" 
-		        datepicker-options="dateOptions" 
-		        date-disabled="disabled(date, mode)" 
-		        ng-required="true"
-		        show-weeks="false" />	    		
-    		<button class="btn" ng-click="open()"><i class="icon-calendar"></i></button>
-    	</div>
-    	<button type="submit" class="btn btn-primary" btn-loading="isLoading" data-loading-text="Loading..." ng-click="submit()">Submit</button>
-    </form>
-    <hr>
-	<div id="map-canvas" style="width:100%;height:600px;"></div>
+    <div class="row-fluid">
+        <div class="span6">
+            <form class="form-inline" ng-controller="DatePickerCtrl">
+                <div class="input-append">
+                    <input type="text" datepicker-popup="dd-MMMM-yyyy" ng-model="dt" open="opened" min="minDate" max="maxDate" 
+                        datepicker-options="dateOptions" 
+                        date-disabled="disabled(date, mode)" 
+                        ng-required="true"
+                        show-weeks="false" />               
+                    <button class="btn" ng-click="open()"><i class="icon-calendar"></i></button>
+                </div>
+                <button type="submit" class="btn btn-primary" btn-loading="isLoading" data-loading-text="Loading..." ng-click="submit()">Submit</button>
+            </form>
+        </div>
+        <div class="span6">
+            {{movesprofile.profile.firstDate}}
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span12">
+            <hr>
+            <div id="map-canvas" style="width:100%;height:600px;"></div>            
+        </div>
+    </div>
 </div>
