--- a/i2037-client/app/partials/moves.html
+++ b/i2037-client/app/partials/moves.html
@@ -13,9 +13,7 @@
                 <button type="submit" class="btn btn-primary" btn-loading="isLoading" data-loading-text="Loading..." ng-click="submit()">Submit</button>
             </form>
         </div>
-        <div class="span6">
-            {{movesprofile.profile.firstDate}}
-        </div>
+        <div class="span6"></div>
     </div>
     <div class="row-fluid">
         <div class="span12">
