Fixed the cellar unit tests and added a timeline directive

--- a/i2037-client/app/partials/home.html
+++ b/i2037-client/app/partials/home.html
@@ -1,4 +1,4 @@
 <div class="hero-unit">
   <h1>Interface 2037</h1>
-  <div>Version: <span app-version></span></div>
+  <div>Version: <span i2-app-version></span></div>
 </div>
