--- a/i2037-client/app/partials/moves.html
+++ b/i2037-client/app/partials/moves.html
@@ -16,19 +16,17 @@
                 <button type="submit" class="btn btn-primary" i2037-loading="isLoading" data-loading-text="Loading..." ng-click="submit()">Submit</button>
             </form>
         </div>
-        <div class="span6">
-            <table class="table table-bordered table-condensed" ng-controller="MovesSummaryCtrl">
-                <tbody>
-                    <tr ng-repeat="activity in summary.summary"><th>{{activity.activity}}</th><td>{{activity.duration}}</td></tr>
-                </tbody>
-            </table>
-        </div>
     </div>
     <div class="row-fluid">
-        <div class="span9">
+        <div class="span9" ng-controller="MovesMapCtrl">
             <div id="map-canvas" style="width:100%;height:600px;"></div>            
         </div>
         <div class="span3" ng-controller="MovesTimelineCtrl">
+            <table class="table table-bordered table-condensed" ng-controller="MovesSummaryCtrl">
+                <tbody>
+                    <tr ng-repeat="activity in summary.summary"><th>{{activity.activity | activity }}</th><td>{{activity.duration}}</td></tr>
+                </tbody>
+            </table>            
             <div i2-timeline="entries" i2-selected="selected"></div>
         </div>
     </div>
