--- a/i2037-client/app/partials/moves-place.html
+++ b/i2037-client/app/partials/moves-place.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <h4>{{place.place.name}}</h4>
-    <p>{{place.startTime | date:'HH:mm'}}hrs - {{place.endTime | date:'HH:mm'}}hrs</p>
-    <p ng-show="place.foursquareId">FourSquare: {{place.foursquareId}}</p>
+    <h4>{{selected.place.name}}</h4>
+    <p>{{selected.startTime | date:'HH:mm'}}hrs - {{selected.endTime | date:'HH:mm'}}hrs</p>
+    <p ng-show="selected.foursquareId">FourSquare: {{selected.foursquareId}}</p>
 </div>
