--- a/i2037-client/app/partials/moves.html
+++ b/i2037-client/app/partials/moves.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row-fluid">
         <div class="span9" ng-controller="MovesMapCtrl">
-            <div id="map-canvas" style="width:100%;height:600px;"></div>            
+            <div i2-map i2-places="places" i2-paths="paths" i2-selected="selected"></div>
         </div>
         <div class="span3" ng-controller="MovesTimelineCtrl">
             <table class="table table-bordered table-condensed" ng-controller="MovesSummaryCtrl">
