created button and spinner directives

--- a/i2037-client/app/partials/moves.html
+++ b/i2037-client/app/partials/moves.html
@@ -13,7 +13,7 @@
                         show-weeks="false" />               
                     <button class="btn" ng-click="open()"><i class="icon-calendar"></i></button>
                 </div>
-                <button type="submit" class="btn btn-primary" i2037-loading="isLoading" data-loading-text="Loading..." ng-click="submit()">Submit</button>
+                <i2-button i2-state="state" type="submit" ng-click="submit()">Submit</i2-button> 
             </form>
         </div>
     </div>
