timeline now indicates change in date

--- a/i2037-client/app/partials/slickgrid.html
+++ b/i2037-client/app/partials/slickgrid.html
@@ -1,4 +1,36 @@
 <div class="span12">
+    <table class="table">
+    <tbody>
+      <tr>
+        <td colspan="2"><h4>Wednesday 23rd October</h4></td>
+      </tr>
+      <tr>
+        <td>13:46</td><td>London Waterloo Railway Station (WAT)</td>
+      </tr>
+      <tr>
+        <td>13:46</td><td>Flat</td>
+      </tr>
+      <tr>
+        <td colspan="2"><h4>Thursday 24rd October</h4></td>
+      </tr>
+      <tr>
+        <td>13:46</td>
+        <td>
+            <div class="media">
+                <a collapse="isCollapsed" class="pull-right"><img class="media-object" src="https://pbs.twimg.com/profile_images/3070651482/047dee082273d9d7a6572083d40fb754_normal.png"></a>
+                <div class="media-body">
+                    <div class="media-heading"><a ng-click="isCollapsed = !isCollapsed">Moves</a></div>
+                    <div collapse="isCollapsed" class="media">A really interesting tweet</div>
+                </div>
+            </div>
+        </td>
+      </tr>
+      <tr>
+        <td>13:46</td><td>London Waterloo Railway Station (WAT)</td>
+      </tr>                        
+    </tbody>
+  </table>
+
 	<div id="graph" style="height:500px"></div>
 	<div id="myGrid" style="width:500px;height:400px;"></div>
 </div>
