Added foursquare and timeline transclusion

--- a/i2037-client/app/partials/slickgrid.html
+++ b/i2037-client/app/partials/slickgrid.html
@@ -2,7 +2,7 @@
     <table class="table">
     <tbody>
       <tr>
-        <td colspan="2"><h4>Wednesday 23rd October</h4></td>
+        <td colspan="2"><h4>Wednesday 23 October</h4></td>
       </tr>
       <tr>
         <td>13:46</td><td>London Waterloo Railway Station (WAT)</td>
@@ -11,17 +11,27 @@
         <td>13:46</td><td>Flat</td>
       </tr>
       <tr>
-        <td colspan="2"><h4>Thursday 24rd October</h4></td>
+        <td colspan="2"><h4>Thursday 24 October</h4></td>
       </tr>
       <tr>
         <td>13:46</td>
         <td>
-            <div class="media">
-                <a collapse="isCollapsed" class="pull-right"><img class="media-object" src="https://pbs.twimg.com/profile_images/3070651482/047dee082273d9d7a6572083d40fb754_normal.png"></a>
-                <div class="media-body">
-                    <div class="media-heading"><a ng-click="isCollapsed = !isCollapsed">Moves</a></div>
-                    <div collapse="isCollapsed" class="media">A really interesting tweet</div>
-                </div>
+            <div>
+              <a>25Hours Hotel</a>  
+              <div>
+                  <div class="well">
+                    <address>Lerchenfelder Strasse 1-3, Wien, Wien, Austria</address>
+                  </div>
+                  <ul class="media-list">
+                      <li class="media">
+                          <a class="pull-right"><img class="media-object" ng-src="{{media.url}}"></a>
+                          <div class="media-body">
+                              <h4 class="media-heading"><h4>Heading</h4>
+                              <div class="media">Here's some comments</div>
+                          </div>
+                      </li>
+                  </ul>
+              </div>
             </div>
         </td>
       </tr>
