--- a/i2037-client/app/partials/moves.html
+++ b/i2037-client/app/partials/moves.html
@@ -18,16 +18,42 @@
         </div>
     </div>
     <div class="row-fluid">
-        <div class="span9" ng-controller="MovesMapCtrl">
-            <div i2-map i2-places="places" i2-paths="paths" i2-selected="selected"></div>
-        </div>
         <div class="span3" ng-controller="MovesTimelineCtrl">
-            <div i2-timeline="entries" i2-selected="selected"></div>
+            <div i2-timeline="entries" i2-selected="selected">
+                <div ng-controller="TimelineEntryCtrl">
+                    <a ng-click="toggleCollapse()">{{entry.text}}</a>
+                    <div collapse="isCollapsed">
+                        <div class="well" i2-spin-show="showSpinner">
+                            <a ng-href="{{entry.venue.canonicalUrl}}">Foursquare</a>
+                            <address>
+                                {{entry.venue.location.address}},
+                                {{entry.venue.location.city}},
+                                {{entry.venue.location.state}},
+                                {{entry.venue.location.postalCode}},
+                                {{entry.venue.location.country}}<br>
+                                <abr title="Telephone">T: </abr><a ng-href="tel:{{entry.venue.contact.phone}">{{entry.venue.contact.formattedPhone}}</a>
+                            </address>
+                        </div>                        
+                        <ul class="media-list">
+                            <li class="media" ng-repeat="comment in entry.comments">
+                                <a class="pull-right"><img class="media-object" ng-src="{{comment.url}}"></a>
+                                <div class="media-body">
+                                    <div class="media-heading">{{comment.heading}}</div>
+                                    <div class="media"><pre>{{comment}}</pre></div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <table class="table table-bordered table-condensed" ng-controller="MovesSummaryCtrl">
                 <tbody>
                     <tr ng-repeat="activity in summary.summary"><th>{{activity.activity | activity }}</th><td>{{activity.duration}}</td></tr>
                 </tbody>
             </table>            
+        </div>        
+        <div class="span9" ng-controller="MovesMapCtrl">
+            <div i2-map i2-places="places" i2-paths="paths" i2-selected="selected"></div>
         </div>
     </div>
 </div>
