Add url to foursquare details

--- a/i2037-client/app/partials/moves.html
+++ b/i2037-client/app/partials/moves.html
@@ -28,6 +28,7 @@
                             <address>
                                 {{entry.venue.address}}<br>
                                 <abr title="Telephone">T: </abr><a ng-href="tel:{{entry.venue.phone}">{{entry.venue.formattedPhone}}</a>
+                                <a ng-href="{{entry.venue.url}}">{{entry.venue.url}}</a>
                             </address>
                         </div>                        
                         <ul class="media-list">
