added comments to timeline and cleanup
added date picker to journal date page, removed $resource from all
moves resources, added simple comment functionality

--- a/i2037-client/app/partials/journal-calendar.html
+++ b/i2037-client/app/partials/journal-calendar.html
@@ -17,4 +17,11 @@
             </form>
         </div>
     </div>
+    <div class="row-fluid">
+        <table class="table table-bordered table-condensed" ng-controller="MovesSummaryCtrl">
+            <tbody>
+                <tr ng-repeat="activity in summary.summary"><th>{{activity.activity | activity }}</th><td>{{activity.duration}}</td></tr>
+            </tbody>
+        </table>            
+    </div>
 </div>
