--- a/i2037-client/app/partials/journal-date.html
+++ b/i2037-client/app/partials/journal-date.html
@@ -3,36 +3,55 @@
         <h2>Journal</h2>
     </div>
     <div class="row-fluid">
-        <div class="span3" ng-controller="MovesTimelineCtrl">
+        <div class="span6">
+            <form class="form-inline" ng-controller="DatePickerCtrl">
+                <div class="input-append">
+                    <input type="text" datepicker-popup="dd-MMMM-yyyy" ng-model="dt" open="opened" min="minDate" max="maxDate" 
+                        datepicker-options="dateOptions" 
+                        date-disabled="disabled(date, mode)" 
+                        ng-required="true"
+                        show-weeks="false" />               
+                    <button class="btn" ng-click="open()"><i class="icon-calendar"></i></button>
+                </div>
+                <i2-button i2-state="state" type="submit" ng-click="submit()">Submit</i2-button> 
+            </form>
+        </div>
+    </div>    
+    <div class="row-fluid">
+        <div class="span3" ng-controller="TimelineCtrl">
             <div i2-timeline="entries" i2-selected="selected">
                 <div ng-controller="TimelineEntryCtrl">
                     <a ng-click="toggleCollapse(entry)">{{entry.text}}</a>
                     <div collapse="isCollapsed">
+                        <hr>
                         <div class="well" i2-spin-show="showSpinner">
                             <a ng-href="{{entry.venue.canonicalUrl}}">Provided by {{entry.venue.type}}</a>
                             <address>
                                 {{entry.venue.address}}<br>
                                 <abr title="Telephone">T: </abr><a ng-href="tel:{{entry.venue.phone}">{{entry.venue.formattedPhone}}</a>
                             </address>
-                            <a ng-href="{{entry.venue.url}}">{{entry.venue.url}}</a>          
-                        </div>                        
+                            <a ng-href="{{entry.venue.url}}">{{entry.venue.url | trim:30 }}</a>
+                        </div>
+                        <div>
+                            <textarea row="1" placeholder="Enter comment..." ng-model="newComment.model.text"></textarea>
+                            <button class="btn btn-mini" ng-click="addComment(entry)"><i class="icon-comment"></i> Comment</button>
+                        </div>                         
                         <ul class="media-list">
-                            <li class="media" ng-repeat="comment in entry.comments">
-                                <a class="pull-right"><img class="media-object" ng-src="{{comment.url}}"></a>
+                            <li class="media" ng-repeat="comment in entry.comments">                                
+                                <a class="pull-right">
+                                    <img class="media-object" ng-src="{{comment.img}}">
+                                    <button ng-click="deleteComment(entry, comment)" class="close">&times;</button>
+                                </a>
                                 <div class="media-body">
-                                    <div class="media-heading">{{comment.heading}}</div>
-                                    <div class="media"><pre>{{comment}}</pre></div>
+                                    <h5 class="media-heading">{{comment.author}}</h5>
+                                    <div class="media">{{comment.model.text}}</div>
+                                    <p><small>{{comment.model.lastUpdateTime | date:'d/M/yy H:mm'}}</small></p>
                                 </div>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <table class="table table-bordered table-condensed" ng-controller="MovesSummaryCtrl">
-                <tbody>
-                    <tr ng-repeat="activity in summary.summary"><th>{{activity.activity | activity }}</th><td>{{activity.duration}}</td></tr>
-                </tbody>
-            </table>            
         </div>        
         <div class="span9" ng-controller="MovesMapCtrl">
             <div i2-map i2-places="places" i2-paths="paths" i2-selected="selected"></div>
