--- a/i2037-client/app/partials/journal-date.html
+++ b/i2037-client/app/partials/journal-date.html
@@ -32,10 +32,12 @@
                             </address>
                             <a ng-href="{{entry.venue.url}}">{{entry.venue.url | trim:30 }}</a>
                         </div>
-                        <div i2-comment="newComment" i2-save="addComment(comment, entry)"></div>
+                        <div i2-comment="newComment" i2-save="saveComment(comment, entry)"></div>
                         <hr>    
                         <ul class="media-list">
-                            <li i2-comment="comment" ng-repeat="comment in entry.comments" i2-delete="deleteComment(comment, entry)"></li>
+                            <li i2-comment="comment" ng-repeat="comment in entry.comments"
+                                i2-save="saveComment(comment, entry)" 
+                                i2-delete="deleteComment(comment, entry)"></li>
                         </ul>
                     </div>
                 </div>
