Adding a comment resets the new comment field

--- a/i2037-client/app/partials/cage.html
+++ b/i2037-client/app/partials/cage.html
@@ -25,6 +25,7 @@
                   <ul class="media-list">
                       <li ng-controller="CommentTestCtrl">
                         <div i2-comment="comment"></div>
+                        <button ng-click="newComment()">New</button>                        
                       </li>
                   </ul>
               </div>
