--- a/i2037-client/app/partials/recipes.html
+++ b/i2037-client/app/partials/recipes.html
@@ -1,19 +1,16 @@
-<div class="span2">
-  <div class="well sidebar-nav">
-    <ul class="nav nav-list">
-      <li class="nav-header">Recipes</li>
-      <li class="active"><a href="#butternut">Butternut Squash</a></li>
-      <li><a href="#chickpeas">Chick Peas</a></li>
-      <li><a href="#peaham">Pea &amp; Ham Soup</a></li>            
-      <li><a href="#chops">Pork Chops</a></li>
-      <li><a href="#chilli">Quick Chilli</a></li>
-      <li><a href="#ragu">Rapid Ragu</a></li>      
-      <li><a href="#salmon">Mirrin Salmon</a></li>      
-      <li><a href="#scallops">Scallops</a></li>
-    </ul>
-  </div><!--/.well -->
-</div><!--/span-->
-<div class="span10">
+<div class="col-md-2">
+  <ul class="nav nav-pills nav-stacked">
+    <li><a href="#butternut">Butternut Squash</a></li>
+    <li><a href="#chickpeas">Chick Peas</a></li>
+    <li><a href="#peaham">Pea &amp; Ham Soup</a></li>            
+    <li><a href="#chops">Pork Chops</a></li>
+    <li><a href="#chilli">Quick Chilli</a></li>
+    <li><a href="#ragu">Rapid Ragu</a></li>      
+    <li><a href="#salmon">Mirrin Salmon</a></li>      
+    <li><a href="#scallops">Scallops</a></li>
+  </ul>
+</div>
+<div class="col-md-10">
   <section id="recipes">
     <div class="page-header"><h2>Recipes</h2></div>
     <h3 id="butternut">Butternut Squash and Ginger Soup</h3>
