--- a/i2037-client/app/partials/loginform.html
+++ b/i2037-client/app/partials/loginform.html
@@ -2,24 +2,23 @@
   <h3>{{title}}</h3>
 </div>
 <div class="modal-body">
-  <form name="login" class="form-horizontal" role="form">
-    <div class="form-group">
+  <form name="loginForm" class="form-horizontal" role="form">
+    <div class="form-group" ng-class="getCls(loginForm.username)">
       <label class="control-label col-md-3" for="inputUsername">Email</label>
-      <div class="col-md-9">
-        <div class="input-group">
-          <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-          <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="authDetails.userName" ng-readonly="authDetails.userNameReadonly" required>
-        </div>              
-      </div>  
-    </div>
-    <div class="form-group">
-      <label class="control-label col-md-3" for="inputPassword">Password</label>
-      <div class="col-md-9">
-        <div class="input-group">
-          <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-          <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="authDetails.password" required>
-        </div>      
+      <div class="input-group col-md-8">
+        <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
+        <input type="email" class="form-control" id="inputUsername" name="username" placeholder="Username" ng-model="authDetails.userName" ng-readonly="authDetails.userNameReadonly" required>
       </div>
+      <p class="help-block col-md-offset-3" ng-show="showErr(loginForm.username, 'email')">Username must be an email address</p>
+      <p class="help-block col-md-offset-3" ng-show="showErr(loginForm.username, 'required')">Username is required</p>  
+    </div>
+    <div class="form-group" ng-class="getCls(loginForm.password)">
+      <label class="control-label col-md-3" for="inputPassword">Password</label>
+      <div class="input-group col-md-8">
+        <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+        <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" ng-model="authDetails.password" required>
+      </div>
+      <p class="help-block col-md-offset-3" ng-show="showErr(loginForm.password, 'required')">Password is required</p>              
     </div>
     <div class="form-group">
       <div class="col-md-offset-3 col-md-9">
