--- a/i2037-client/app/partials/grapes.html
+++ b/i2037-client/app/partials/grapes.html
@@ -1,13 +1,10 @@
-<div class="span2">
-  <div class="well sidebar-nav">
-    <ul class="nav nav-list">
-      <li class="nav-header">Cellar</li>
-      <li><a href="#/cellar/wines">Wines</a></li>
-      <li class="active"><a href="#/cellar/grapes">Grapes</a></li>
-    </ul>
-  </div>  
+<div class="col-md-2">
+  <ul class="nav nav-pills nav-stacked">
+    <li><a href="#/cellar/wines">Wines</a></li>
+    <li class="active"><a href="#/cellar/grapes">Grapes</a></li>
+  </ul>
 </div>
-<div class="span10">
+<div class="col-md-10">
   <div class="page-header">
     <h2>Grapes</h2>
   </div>
